--- a/InterviewProject.Web/ClientApp/src/custom.css
+++ b/InterviewProject.Web/ClientApp/src/custom.css
@@ -12,3 +12,18 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+.suggestion {
+    cursor: pointer;
+    border-right: 1px solid black;
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
+    .suggestion:hover {
+        background-color: gray;
+    }
+
+.card {
+    margin-bottom: 10px;
+}
